[tool.poetry]
name = "overflow-ml"
version = "0.1.0"
description = "A package to analyze and predict the impact of climate change on the frequency and duration of combined sewage overflow (CSO) events."
authors = ["Rafael Ballestiero <rafa.ballestiero@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.7"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
